tests/algorithms/x/C/web_programming/fetch_well_rx_price.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t fetch_pharmacy_and_price_list_len;

size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

typedef struct { const char **keys; const char **vals; size_t len; size_t cap; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static MapSS* list_append_MapSS(MapSS *arr, size_t *len, MapSS val) {
    arr = realloc(arr, (*len + 1) * sizeof(MapSS));
    arr[*len] = val;
    (*len)++;
    return arr;
}

const char* SAMPLE_HTML = "<div class=\"grid-x pharmCard\"><p class=\"list-title\">Pharmacy A</p><span class=\"price price-large\">$10.00</span></div><div class=\"grid-x pharmCard\"><p class=\"list-title\">Pharmacy B</p><span class=\"price price-large\">$12.50</span></div>";
MapSS *pharmacy_price_list = NULL;
size_t pharmacy_price_list_len = 0;

long long find_substring(const char* s, const char* sub, long long from);
MapSS * fetch_pharmacy_and_price_list(const char* drug_name, const char* zip_code);
int main(void);

long long find_substring(const char* s, const char* sub, long long from) {
    long long i = from;
    while (i <= (strlen(s) - strlen(sub))) {
        long long j = 0LL;
        while ((j < strlen(sub)) && (strcmp(_substring(s, i + j, (i + j) + 1LL), _substring(sub, j, j + 1LL)) == 0)) {
            j = j + 1LL;
        }
        if (j == strlen(sub)) {
            return i;
        }
        i = i + 1LL;
    }
    return -1LL;
}

MapSS * fetch_pharmacy_and_price_list(const char* drug_name, const char* zip_code) {
    if ((strcmp(drug_name, "") == 0) || (strcmp(zip_code, "") == 0)) {
        fetch_pharmacy_and_price_list_len = 0;
        return NULL;
    }
    MapSS *results = NULL;
    size_t results_len = 0;
    long long pos = 0LL;
    const char* block_tag = "<div class=\"grid-x pharmCard\">";
    const char* name_tag = "<p class=\"list-title\">";
    const char* price_tag = "<span class=\"price price-large\">";
    while (1) {
        long long div_idx = find_substring(SAMPLE_HTML, block_tag, pos);
        if (div_idx < 0LL) {
            break;
        }
        long long name_start = find_substring(SAMPLE_HTML, name_tag, div_idx);
        if (name_start < 0LL) {
            break;
        }
        name_start = name_start + strlen(name_tag);
        long long name_end = find_substring(SAMPLE_HTML, "</p>", name_start);
        if (name_end < 0LL) {
            break;
        }
        const char* name = _substring(SAMPLE_HTML, name_start, name_end);
        long long price_start = find_substring(SAMPLE_HTML, price_tag, name_end);
        if (price_start < 0LL) {
            break;
        }
        price_start = price_start + strlen(price_tag);
        long long price_end = find_substring(SAMPLE_HTML, "</span>", price_start);
        if (price_end < 0LL) {
            break;
        }
        const char* price = _substring(SAMPLE_HTML, price_start, price_end);
        results = list_append_MapSS(results, &results_len, (MapIL){0});
        pos = price_end;
    }
    return fetch_pharmacy_and_price_list_len = results_len, results;
}

int main(void) {
    {
        long long __start = _now();
        pharmacy_price_list = fetch_pharmacy_and_price_list("aspirin", "30303");
        pharmacy_price_list_len = fetch_pharmacy_and_price_list_len;
        if (pharmacy_price_list != NULL) {
            long long i = 0LL;
            while (i < pharmacy_price_list_len) {
                MapSS entry = pharmacy_price_list[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? pharmacy_price_list_len + _mochi_idx : _mochi_idx;})];
                puts(str_concat(str_concat(str_concat("Pharmacy: ", map_get_ss(entry.keys, entry.vals, entry.len, "pharmacy_name")), " Price: "), map_get_ss(entry.keys, entry.vals, entry.len, "price")));
                i = i + 1LL;
            }
        } else {
            puts("No results found");
        }
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
